--- a/style.css
+++ b/style.css
@@ -55,7 +55,9 @@ nav {
 }
 
 header {
-  width: 100%;
+  /* width: 100%; */
+  margin-bottom: 397px;
+  border: 1px solid;
 }
 
 header img {
@@ -84,7 +86,6 @@ header img {
   width: 400px;
   box-shadow: 0px 4px 4px 0px #00000040 inset;
 
-  
   /* border: 1px solid; */
 }
 
@@ -97,4 +98,72 @@ button {
   width: 250px;
   position: relative;
   border-radius: 25px;
+}
+
+.tentang-kami-container {
+  width: 100%;
+}
+
+.tentang-kami-background {
+  width: 100%;
+  position: absolute;
+  z-index: 0;
+  left: 0;
+}
+
+.tentang-kami-text {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  z-index: 1;
+  /* border: 1px solid; */
+}
+
+.tentang-kami-text h3,
+p {
+  color: #fff;
+}
+
+.tentang-kami-text h3 {
+  font-size: 23px;
+}
+
+.tentang-kami-text p {
+  font-size: 16px;
+}
+
+.tentang-kami-text .left-text {
+  width: 380px;
+  margin-top: 50px;
+  padding-left: 20px;
+}
+
+.tentang-kami-text .right-text {
+  width: 380px;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin-top: 100px;
+  padding-right: 20px;
+}
+
+.tentang-kami-text .right-text p {
+  width: 280px;
+  /* border: 1px solid; */
+}
+
+.bottom-text {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  z-index: 1;
+  margin-top: 260px;
+  /* border: 1px solid; */
+}
+
+.bottom-text p {
+  width: 500px;
 }
