--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 * {
   font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  color: #fff;
 }
 
 .red-text {
@@ -54,6 +57,7 @@ nav {
   /* border: 1px solid; */
 }
 
+/* Header */
 header {
   /* width: 100%; */
   margin-bottom: 397px;
@@ -100,8 +104,10 @@ button {
   border-radius: 25px;
 }
 
+/* Tentang Kami */
 .tentang-kami-container {
   width: 100%;
+  /* margin-bottom: 30px; */
 }
 
 .tentang-kami-background {
@@ -121,7 +127,7 @@ button {
 }
 
 .tentang-kami-text h3,
-p {
+.tentang-kami-text p {
   color: #fff;
 }
 
@@ -136,12 +142,17 @@ p {
 .tentang-kami-text .left-text {
   width: 380px;
   margin-top: 50px;
-  padding-left: 20px;
+  margin-left: 20px;
+  /* border: 1px solid; */
+}
+
+.tentang-kami-text .left-text p {
+  text-align: left;
 }
 
 .tentang-kami-text .right-text {
   width: 380px;
-  text-align: right;
+
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -151,6 +162,7 @@ p {
 
 .tentang-kami-text .right-text p {
   width: 280px;
+  text-align: right;
   /* border: 1px solid; */
 }
 
@@ -166,4 +178,189 @@ p {
 
 .bottom-text p {
   width: 500px;
+}
+
+/* Produk Kami */
+.produk-kami-container {
+  width: 100%;
+}
+
+.produk-kami-background {
+  width: 100%;
+  position: absolute;
+  z-index: 0;
+  left: 0;
+}
+
+.produk-kami-heading {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.produk-kami-heading h1 {
+  color: #fff;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.produk-card-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.produk-card {
+  position: relative;
+  background-color: #f9f6f61f;
+  width: 280px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid white; */
+}
+
+.produk-card img {
+  width: 100%;
+  border: 1px solid;
+}
+
+.produk-card h3,
+.produk-card p {
+  color: #fff;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+  /* border: 1px solid; */
+}
+
+.produk-card .top-heading {
+  margin-top: 20px;
+}
+
+.produk-card p {
+  width: 250px;
+  margin-top: 10px;
+  /* border: 1px solid; */
+}
+
+.produk-card .bottom-heading {
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+/* Hubungi Kami */
+.hubungi-kami-container {
+  width: 100%;
+}
+
+.hubungi-kami-background {
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+
+.text-and-button {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
+  /* border: 1px solid white; */
+}
+
+.text-and-button h1 {
+  position: relative;
+  color: #fff;
+  font-size: 30px;
+  font-weight: 300;
+}
+
+.text-and-button button {
+  background-color: #faac37;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 50px;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+footer {
+  background-color: #000;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+  top: 115px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  padding-left: 140px;
+  /* border: 1px solid; */
+}
+
+.footer-content-container {
+  display: flex;
+  /* border: 1px solid; */
+}
+
+.footer-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* width: 350px; */
+  /* border: 1px solid white; */
+}
+
+.footer-info p {
+  width: 220px;
+  /* border: 1px solid; */
+  margin-top: 20px;
+}
+
+.footer-info h6 {
+  /* color: #fff; */
+  font-size: 16px;
+  font-weight: 300;
+  margin-top: 20px;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+  padding-left: 80px;
+  /* border: 1px solid white; */
+}
+
+.footer-nav a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.footer-socmed {
+  padding-left: 80px;
+}
+
+.socmed-icon {
+  margin-top: 10px;
+}
+
+.socmed-icon a {
+  margin-right: 10px;
+}
+
+.socmed-icon img {
+  height: 20px;
+}
+
+.footer-socmed h6 {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.footer-socmed :nth-child(3) {
+  margin-top: 10px;
+  /* border: 1px solid white  */
 }
